src/gen/parser.output
Terminals unused in grammar

   "=>"
   INTERFACE
   TRAIT
   ENUM
   SPECIAL_IDENTIFIER
   SPECIAL_ARGUMENT
   SPECIAL_LOOP_ARGUMENT


State 22 conflicts: 12 shift/reduce
State 30 conflicts: 2 shift/reduce
State 45 conflicts: 1 shift/reduce
State 47 conflicts: 1 shift/reduce
State 102 conflicts: 2 shift/reduce
State 111 conflicts: 1 shift/reduce
State 117 conflicts: 2 shift/reduce


Grammar

    0 $accept: Program $end

    1 Program: Program Statement StatementTerminator
    2        | %empty

    3 Statement: VariableDeclaration
    4          | Function
    5          | Class
    6          | CommandChain

    7 CommandChain: CommandChain Expressions
    8             | Expressions

    9 Expressions: Expressions "," Expression
   10            | Expression

   11 Expression: Expression ".." Expression
   12           | Expression "+=" Expression
   13           | Expression "-=" Expression
   14           | Expression "*=" Expression
   15           | Expression "/=" Expression
   16           | Expression "%=" Expression
   17           | Expression "**=" Expression
   18           | Expression "+" Expression
   19           | Expression "-" Expression
   20           | Expression "*" Expression
   21           | Expression "/" Expression
   22           | Expression "%" Expression
   23           | Expression "**" Expression
   24           | Expression "<<=" Expression
   25           | Expression ">>=" Expression
   26           | Expression "<<" Expression
   27           | Expression ">>" Expression
   28           | Expression "==" Expression
   29           | Expression "!=" Expression
   30           | Expression "<=>" Expression
   31           | Expression "<=" Expression
   32           | Expression ">=" Expression
   33           | Expression "<" Expression
   34           | Expression ">" Expression
   35           | Assignable "=" Expression
   36           | Assignable ":=" Expression
   37           | Expression "&=" Expression
   38           | Expression "|=" Expression
   39           | Expression "^=" Expression
   40           | Expression "&" Expression
   41           | Expression "|" Expression
   42           | Expression "^" Expression
   43           | Expression "&&" Expression
   44           | Expression "||" Expression
   45           | Expression "xor" Expression
   46           | Expression "::" Expression
   47           | Expression "->" Expression
   48           | Expression ":>" Expression
   49           | Expression IS Expression
   50           | Expression ISSUB Expression
   51           | "~" Expression
   52           | "!" Expression
   53           | "+" Expression
   54           | "-" Expression
   55           | ExpressionItem

   56 Assignable: ExpressionItem ":" IDENTIFIER
   57           | ExpressionItem

   58 VariableDeclaration: DeclarationModifier Assignable "=" Expression
   59                    | DeclarationModifier Assignable

   60 DeclarationModifier: VAR
   61                    | LET
   62                    | FINAL
   63                    | CONST

   64 ExpressionItem: Property

   65 Property: PropertyPrefix PropertySuffix
   66         | PropertyPrefix

   67 PropertyPrefix: Literal
   68               | IDENTIFIER
   69               | "(" Expression ")"

   70 PropertySuffix: PropertySuffix PropertySuffixItem
   71               | PropertySuffixItem

   72 PropertySuffixItem: "." IDENTIFIER
   73                   | "[" Expressions "]"
   74                   | "(" Expressions ")"
   75                   | "(" ")"

   76 Literal: Number
   77        | String
   78        | Array
   79        | Tuple
   80        | Set
   81        | Regex

   82 Number: NUMBER

   83 String: SINGLE_QUOTED_STRING
   84       | DOUBLE_QUOTED_STRING

   85 Array: "[" Expressions "]"

   86 Tuple: "(" Expressions "," Expression ")"
   87      | "(" Expression "," ")"

   88 Set: "{" Expressions "}"
   89    | "{" Expression "," "}"

   90 Regex: REGEX

   91 Function: FUNCTION Arguments "{" Program "}"

   92 Class: CLASS Arguments OptionalIdentifier Extends "{" Program "}"

   93 Arguments: "(" Declarations ")"
   94          | "(" ")"
   95          | %empty

   96 Declarations: Declarations ":" Declaration
   97             | Declaration

   98 Declaration: IDENTIFIER Type Initializer

   99 Type: ":" IDENTIFIER
  100     | %empty

  101 Initializer: "=" IDENTIFIER
  102            | %empty

  103 OptionalIdentifier: IDENTIFIER
  104                   | %empty

  105 Extends: ":" IDENTIFIER ":" Identifiers
  106        | ":" IDENTIFIER
  107        | ":" ":" Identifiers
  108        | %empty

  109 Identifiers: Identifiers IDENTIFIER
  110            | IDENTIFIER

  111 StatementTerminator: ";"
  112                    | %empty


Terminals, with rules where they appear

$end (0) 0
error (256)
".." (258) 11
"." (259) 72
";" (260) 111
":" (261) 56 96 99 105 106 107
"," (262) 9 86 87 89
"+=" (263) 12
"-=" (264) 13
"*=" (265) 14
"/=" (266) 15
"%=" (267) 16
"**=" (268) 17
"+" (269) 18 53
"-" (270) 19 54
"*" (271) 20
"/" (272) 21
"%" (273) 22
"**" (274) 23
"<<=" (275) 24
">>=" (276) 25
"<<" (277) 26
">>" (278) 27
"==" (279) 28
"!=" (280) 29
"<=>" (281) 30
"<=" (282) 31
">=" (283) 32
"<" (284) 33
">" (285) 34
"=" (286) 35 58 101
":=" (287) 36
"&=" (288) 37
"|=" (289) 38
"^=" (290) 39
"&" (291) 40
"|" (292) 41
"~" (293) 51
"^" (294) 42
"&&" (295) 43
"||" (296) 44
"!" (297) 52
"xor" (298) 45
"::" (299) 46
"->" (300) 47
":>" (301) 48
"{" (302) 88 89 91 92
"}" (303) 88 89 91 92
"(" (304) 69 74 75 86 87 93 94
")" (305) 69 74 75 86 87 93 94
"[" (306) 73 85
"]" (307) 73 85
"=>" (308)
VAR (309) 60
LET (310) 61
FINAL (311) 62
CONST (312) 63
IS (313) 49
ISSUB (314) 50
FUNCTION (315) 91
CLASS (316) 92
INTERFACE (317)
TRAIT (318)
ENUM (319)
IDENTIFIER (320) 56 68 72 98 99 101 103 105 106 109 110
SPECIAL_IDENTIFIER (321)
SPECIAL_ARGUMENT (322)
SPECIAL_LOOP_ARGUMENT (323)
NUMBER (324) 82
SINGLE_QUOTED_STRING (325) 83
DOUBLE_QUOTED_STRING (326) 84
REGEX (327) 90
CC (328)
EXPRESSIONS (329)
PREFIX (330)


Nonterminals, with rules where they appear

$accept (76)
    on left: 0
Program (77)
    on left: 1 2, on right: 0 1 91 92
Statement (78)
    on left: 3 4 5 6, on right: 1
CommandChain (79)
    on left: 7 8, on right: 6 7
Expressions (80)
    on left: 9 10, on right: 7 8 9 73 74 85 86 88
Expression (81)
    on left: 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28
    29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49
    50 51 52 53 54 55, on right: 9 10 11 12 13 14 15 16 17 18 19 20
    21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41
    42 43 44 45 46 47 48 49 50 51 52 53 54 58 69 86 87 89
Assignable (82)
    on left: 56 57, on right: 35 36 58 59
VariableDeclaration (83)
    on left: 58 59, on right: 3
DeclarationModifier (84)
    on left: 60 61 62 63, on right: 58 59
ExpressionItem (85)
    on left: 64, on right: 55 56 57
Property (86)
    on left: 65 66, on right: 64
PropertyPrefix (87)
    on left: 67 68 69, on right: 65 66
PropertySuffix (88)
    on left: 70 71, on right: 65 70
PropertySuffixItem (89)
    on left: 72 73 74 75, on right: 70 71
Literal (90)
    on left: 76 77 78 79 80 81, on right: 67
Number (91)
    on left: 82, on right: 76
String (92)
    on left: 83 84, on right: 77
Array (93)
    on left: 85, on right: 78
Tuple (94)
    on left: 86 87, on right: 79
Set (95)
    on left: 88 89, on right: 80
Regex (96)
    on left: 90, on right: 81
Function (97)
    on left: 91, on right: 4
Class (98)
    on left: 92, on right: 5
Arguments (99)
    on left: 93 94 95, on right: 91 92
Declarations (100)
    on left: 96 97, on right: 93 96
Declaration (101)
    on left: 98, on right: 96 97
Type (102)
    on left: 99 100, on right: 98
Initializer (103)
    on left: 101 102, on right: 98
OptionalIdentifier (104)
    on left: 103 104, on right: 92
Extends (105)
    on left: 105 106 107 108, on right: 92
Identifiers (106)
    on left: 109 110, on right: 105 107 109
StatementTerminator (107)
    on left: 111 112, on right: 1


State 0

    0 $accept: . Program $end

    $default  reduce using rule 2 (Program)

    Program  go to state 1


State 1

    0 $accept: Program . $end
    1 Program: Program . Statement StatementTerminator

    $end                  shift, and go to state 2
    "+"                   shift, and go to state 3
    "-"                   shift, and go to state 4
    "~"                   shift, and go to state 5
    "!"                   shift, and go to state 6
    "{"                   shift, and go to state 7
    "("                   shift, and go to state 8
    "["                   shift, and go to state 9
    VAR                   shift, and go to state 10
    LET                   shift, and go to state 11
    FINAL                 shift, and go to state 12
    CONST                 shift, and go to state 13
    FUNCTION              shift, and go to state 14
    CLASS                 shift, and go to state 15
    IDENTIFIER            shift, and go to state 16
    NUMBER                shift, and go to state 17
    SINGLE_QUOTED_STRING  shift, and go to state 18
    DOUBLE_QUOTED_STRING  shift, and go to state 19
    REGEX                 shift, and go to state 20

    Statement            go to state 21
    CommandChain         go to state 22
    Expressions          go to state 23
    Expression           go to state 24
    Assignable           go to state 25
    VariableDeclaration  go to state 26
    DeclarationModifier  go to state 27
    ExpressionItem       go to state 28
    Property             go to state 29
    PropertyPrefix       go to state 30
    Literal              go to state 31
    Number               go to state 32
    String               go to state 33
    Array                go to state 34
    Tuple                go to state 35
    Set                  go to state 36
    Regex                go to state 37
    Function             go to state 38
    Class                go to state 39


State 2

    0 $accept: Program $end .

    $default  accept


State 3

   53 Expression: "+" . Expression

    "+"                   shift, and go to state 3
    "-"                   shift, and go to state 4
    "~"                   shift, and go to state 5
    "!"                   shift, and go to state 6
    "{"                   shift, and go to state 7
    "("                   shift, and go to state 8
    "["                   shift, and go to state 9
    IDENTIFIER            shift, and go to state 16
    NUMBER                shift, and go to state 17
    SINGLE_QUOTED_STRING  shift, and go to state 18
    DOUBLE_QUOTED_STRING  shift, and go to state 19
    REGEX                 shift, and go to state 20

    Expression      go to state 40
    Assignable      go to state 25
    ExpressionItem  go to state 28
    Property        go to state 29
    PropertyPrefix  go to state 30
    Literal         go to state 31
    Number          go to state 32
    String          go to state 33
    Array           go to state 34
    Tuple           go to state 35
    Set             go to state 36
    Regex           go to state 37


State 4

   54 Expression: "-" . Expression

    "+"                   shift, and go to state 3
    "-"                   shift, and go to state 4
    "~"                   shift, and go to state 5
    "!"                   shift, and go to state 6
    "{"                   shift, and go to state 7
    "("                   shift, and go to state 8
    "["                   shift, and go to state 9
    IDENTIFIER            shift, and go to state 16
    NUMBER                shift, and go to state 17
    SINGLE_QUOTED_STRING  shift, and go to state 18
    DOUBLE_QUOTED_STRING  shift, and go to state 19
    REGEX                 shift, and go to state 20

    Expression      go to state 41
    Assignable      go to state 25
    ExpressionItem  go to state 28
    Property        go to state 29
    PropertyPrefix  go to state 30
    Literal         go to state 31
    Number          go to state 32
    String          go to state 33
    Array           go to state 34
    Tuple           go to state 35
    Set             go to state 36
    Regex           go to state 37


State 5

   51 Expression: "~" . Expression

    "+"                   shift, and go to state 3
    "-"                   shift, and go to state 4
    "~"                   shift, and go to state 5
    "!"                   shift, and go to state 6
    "{"                   shift, and go to state 7
    "("                   shift, and go to state 8
    "["                   shift, and go to state 9
    IDENTIFIER            shift, and go to state 16
    NUMBER                shift, and go to state 17
    SINGLE_QUOTED_STRING  shift, and go to state 18
    DOUBLE_QUOTED_STRING  shift, and go to state 19
    REGEX                 shift, and go to state 20

    Expression      go to state 42
    Assignable      go to state 25
    ExpressionItem  go to state 28
    Property        go to state 29
    PropertyPrefix  go to state 30
    Literal         go to state 31
    Number          go to state 32
    String          go to state 33
    Array           go to state 34
    Tuple           go to state 35
    Set             go to state 36
    Regex           go to state 37


State 6

   52 Expression: "!" . Expression

    "+"                   shift, and go to state 3
    "-"                   shift, and go to state 4
    "~"                   shift, and go to state 5
    "!"                   shift, and go to state 6
    "{"                   shift, and go to state 7
    "("                   shift, and go to state 8
    "["                   shift, and go to state 9
    IDENTIFIER            shift, and go to state 16
    NUMBER                shift, and go to state 17
    SINGLE_QUOTED_STRING  shift, and go to state 18
    DOUBLE_QUOTED_STRING  shift, and go to state 19
    REGEX                 shift, and go to state 20

    Expression      go to state 43
    Assignable      go to state 25
    ExpressionItem  go to state 28
    Property        go to state 29
    PropertyPrefix  go to state 30
    Literal         go to state 31
    Number          go to state 32
    String          go to state 33
    Array           go to state 34
    Tuple           go to state 35
    Set             go to state 36
    Regex           go to state 37


State 7

   88 Set: "{" . Expressions "}"
   89    | "{" . Expression "," "}"

    "+"                   shift, and go to state 3
    "-"                   shift, and go to state 4
    "~"                   shift, and go to state 5
    "!"                   shift, and go to state 6
    "{"                   shift, and go to state 7
    "("                   shift, and go to state 8
    "["                   shift, and go to state 9
    IDENTIFIER            shift, and go to state 16
    NUMBER                shift, and go to state 17
    SINGLE_QUOTED_STRING  shift, and go to state 18
    DOUBLE_QUOTED_STRING  shift, and go to state 19
    REGEX                 shift, and go to state 20

    Expressions     go to state 44
    Expression      go to state 45
    Assignable      go to state 25
    ExpressionItem  go to state 28
    Property        go to state 29
    PropertyPrefix  go to state 30
    Literal         go to state 31
    Number          go to state 32
    String          go to state 33
    Array           go to state 34
    Tuple           go to state 35
    Set             go to state 36
    Regex           go to state 37


State 8

   69 PropertyPrefix: "(" . Expression ")"
   86 Tuple: "(" . Expressions "," Expression ")"
   87      | "(" . Expression "," ")"

    "+"                   shift, and go to state 3
    "-"                   shift, and go to state 4
    "~"                   shift, and go to state 5
    "!"                   shift, and go to state 6
    "{"                   shift, and go to state 7
    "("                   shift, and go to state 8
    "["                   shift, and go to state 9
    IDENTIFIER            shift, and go to state 16
    NUMBER                shift, and go to state 17
    SINGLE_QUOTED_STRING  shift, and go to state 18
    DOUBLE_QUOTED_STRING  shift, and go to state 19
    REGEX                 shift, and go to state 20

    Expressions     go to state 46
    Expression      go to state 47
    Assignable      go to state 25
    ExpressionItem  go to state 28
    Property        go to state 29
    PropertyPrefix  go to state 30
    Literal         go to state 31
    Number          go to state 32
    String          go to state 33
    Array           go to state 34
    Tuple           go to state 35
    Set             go to state 36
    Regex           go to state 37


State 9

   85 Array: "[" . Expressions "]"

    "+"                   shift, and go to state 3
    "-"                   shift, and go to state 4
    "~"                   shift, and go to state 5
    "!"                   shift, and go to state 6
    "{"                   shift, and go to state 7
    "("                   shift, and go to state 8
    "["                   shift, and go to state 9
    IDENTIFIER            shift, and go to state 16
    NUMBER                shift, and go to state 17
    SINGLE_QUOTED_STRING  shift, and go to state 18
    DOUBLE_QUOTED_STRING  shift, and go to state 19
    REGEX                 shift, and go to state 20
